Added Test Appointment Access data layer & Added Schedule Test logic

--- a/DVLDAccessLayer/DVLDAccessLayer.csproj
+++ b/DVLDAccessLayer/DVLDAccessLayer.csproj
@@ -47,6 +47,7 @@
     <Compile Include="clsLicenseData.cs" />
     <Compile Include="clsLocalDrivingLicenseApplicationsData.cs" />
     <Compile Include="clsPersonData.cs" />
+    <Compile Include="clsTestAppointmentData.cs" />
     <Compile Include="clsTestTypesData.cs" />
     <Compile Include="clsUserData.cs" />
     <Compile Include="CountryData.cs" />
