feat(ui): Add Take Test form

--- a/DVLD-project.csproj
+++ b/DVLD-project.csproj
@@ -188,6 +188,12 @@
     <Compile Include="Tests\TestType\frmListTestTypes.Designer.cs">
       <DependentUpon>frmListTestTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Tests\TestType\frmTakeTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tests\TestType\frmTakeTest.Designer.cs">
+      <DependentUpon>frmTakeTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Users\Controls\ctrlUserDetailsCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -291,6 +297,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Tests\TestType\frmListTestTypes.resx">
       <DependentUpon>frmListTestTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tests\TestType\frmTakeTest.resx">
+      <DependentUpon>frmTakeTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Users\Controls\ctrlUserDetailsCard.resx">
       <DependentUpon>ctrlUserDetailsCard.cs</DependentUpon>
