--- a/DVLDBusinessLayer/DVLDBusinessLayer.csproj
+++ b/DVLDBusinessLayer/DVLDBusinessLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="clsApplication.cs" />
     <Compile Include="clsApplicationTypes.cs" />
     <Compile Include="clsDriver.cs" />
+    <Compile Include="clsInternationalLicenseApplication.cs" />
     <Compile Include="clsLicense.cs" />
     <Compile Include="clsLicenseClasses.cs" />
     <Compile Include="clsLocalDrivingLicenseApplication.cs" />
