feat(detained_license): Add detained license business layer

--- a/DVLDBusinessLayer/DVLDBusinessLayer.csproj
+++ b/DVLDBusinessLayer/DVLDBusinessLayer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="clsApplication.cs" />
     <Compile Include="clsApplicationTypes.cs" />
+    <Compile Include="clsDetainedLicense.cs" />
     <Compile Include="clsDriver.cs" />
     <Compile Include="clsInternationalLicenseApplication.cs" />
     <Compile Include="clsLicense.cs" />
