Refactor utilities and introduce centralized logger

--- a/DVLDBusinessLayer/DVLDBusinessLayer.csproj
+++ b/DVLDBusinessLayer/DVLDBusinessLayer.csproj
@@ -49,6 +49,7 @@
     <Compile Include="clsLicense.cs" />
     <Compile Include="clsLicenseClasses.cs" />
     <Compile Include="clsLocalDrivingLicenseApplication.cs" />
+    <Compile Include="clsLogger.cs" />
     <Compile Include="clsPerson.cs" />
     <Compile Include="clsCountry.cs" />
     <Compile Include="clsTest.cs" />
