--- a/DVLDAccessLayer/DVLDAccessLayer.csproj
+++ b/DVLDAccessLayer/DVLDAccessLayer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CountryData.cs" />
     <Compile Include="DVLDAcessLayerSettings.cs" />
     <Compile Include="clsLicenseClassData.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
